--- a/app/src/main/res/layout/fragment_choose_hostel.xml
+++ b/app/src/main/res/layout/fragment_choose_hostel.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".login.ChooseHostel"
-    android:background="@drawable/hostelback">
+    android:background="@drawable/hostelback"
+    tools:context=".login.ChooseHostel">
 
     <LinearLayout
+        android:id="@+id/hostelback"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="5"
-        android:id="@+id/hostelback"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="5">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:weightSum="2"
+            android:background="@color/transparent"
             android:orientation="vertical"
-            android:background="@color/transparent">
+            android:weightSum="2">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="1"
                 android:layout_margin="40dp"
-                android:src="@drawable/aaveglogowhite"/>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
                 android:layout_weight="1"
+                android:src="@drawable/aaveglogowhite" />
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/hostelbanner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="40dp"
                 >
+
                 <TextView
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:text="CHOOSE YOUR HOSTEL"
                     android:textColor="#000"
-                    android:textSize="24sp"
-                    android:layout_gravity="center"/>
+                    android:textSize="24sp" />
 
             </androidx.cardview.widget.CardView>
 
@@ -49,10 +54,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:weightSum="2"
             android:background="@color/transparent"
+            android:orientation="horizontal"
 
-            android:orientation="horizontal">
+            android:weightSum="2">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/agate"
@@ -64,10 +69,10 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="10dp"
                 android:backgroundTint="@color/darktransparent"
                 android:backgroundTintMode="multiply"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/azurite"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,17 +89,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@color/transparent"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:text="Agate"
-                    android:background="@color/transparent"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:background="@color/transparent"
-                    android:src="@drawable/agatelogo"
-                    android:layout_margin="10dp"/>
+                    android:src="@drawable/agatelogo" />
 
 
             </androidx.cardview.widget.CardView>
@@ -105,19 +111,20 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
-                android:backgroundTint="@color/darktransparent"
-
                 android:layout_marginStart="10dp"
+
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/darktransparent"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/agate"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:id="@+id/azuritecard"
                     android:layout_width="match_parent"
@@ -134,30 +141,31 @@
                     android:text="Azurite"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/azuritelogo"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:src="@drawable/azuritelogo" />
 
             </androidx.cardview.widget.CardView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:weightSum="2"
             android:background="@color/transparent"
+            android:orientation="horizontal"
 
-            android:orientation="horizontal">
+            android:weightSum="2">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/bloodstone"
-                android:backgroundTint="@color/darktransparent"
-
                 android:layout_width="0dp"
+
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:layout_marginStart="10dp"
@@ -165,12 +173,14 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/darktransparent"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cobalt"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:id="@+id/bloodstonecard"
                     android:layout_width="match_parent"
@@ -187,11 +197,12 @@
                     android:text="Bloodstone"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/bloodstonelogo"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:src="@drawable/bloodstonelogo" />
 
 
             </androidx.cardview.widget.CardView>
@@ -201,45 +212,48 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
-                android:backgroundTint="@color/darktransparent"
-
                 android:layout_marginStart="10dp"
+
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/darktransparent"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/bloodstone"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:id="@+id/cobaltcard"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY" />
+
                 <TextView
                     android:id="@+id/cobalttext"
-                    android:layout_marginStart="125dp"
-                android:layout_marginLeft="125dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="125dp"
-                android:layout_marginRight="125dp"
-                android:layout_marginBottom="25dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginStart="125dp"
+                    android:layout_marginLeft="125dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="125dp"
+                    android:layout_marginRight="125dp"
+                    android:layout_marginBottom="25dp"
 
                     android:fontFamily="sans-serif-condensed-medium"
                     android:text="Cobalt"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/cobaltlogo"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:src="@drawable/cobaltlogo" />
 
 
             </androidx.cardview.widget.CardView>
@@ -255,17 +269,19 @@
             android:orientation="horizontal"
 
             android:weightSum="2">
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.30"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/opal"
+                app:layout_constraintRight_toRightOf="parent"
 
 
                 />
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="match_parent"
@@ -284,7 +300,6 @@
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
                 android:layout_marginStart="30dp"
-                app:layout_constraintWidth_percent="0.45"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/darktransparent"
@@ -293,7 +308,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.45">
 
                 <ImageView
                     android:id="@+id/opalcard"
@@ -311,11 +327,12 @@
                     android:text="Opal"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/opallogo"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:src="@drawable/opallogo" />
 
             </androidx.cardview.widget.CardView>
 
@@ -338,22 +355,22 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:weightSum="2"
             android:background="@color/transparent"
+            android:orientation="horizontal"
 
-            android:orientation="horizontal">
+            android:weightSum="2">
 
 
             <Button
+                android:id="@+id/chooseButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/chooseButton"
                 android:background="@drawable/buttoncustom"
+                android:padding="10dp"
                 android:text="Choose hostel"
-                android:textSize="18sp"
                 android:textColor="#000"
-                android:padding="5dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -362,8 +379,6 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
     </LinearLayout>
