--- a/app/src/main/res/layout/hostel_events_card.xml
+++ b/app/src/main/res/layout/hostel_events_card.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:lines="4"
+                android:ellipsize="end"
                 android:textSize="20sp"
                 android:textFontWeight="700"
                 android:layout_centerVertical="true"
